--- a/passwords.html
+++ b/passwords.html
@@ -4,17 +4,28 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Пользователи</title>
+    <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <aside>
       <nav>
-        <a href="index.html">Пользователи</a>
-        <a href="modules.html">Модули</a>
-        <a href="passwords.html">Пароли</a>
+        <a href="index.html">
+          <i class="bx bx-user"></i>
+          <span> Пользователи </span>
+        </a>
+        <a href="modules.html">
+          <i class="bx bx-file-blank"></i>
+          <span> Модули </span>
+        </a>
+        <a href="passwords.html">
+          <i class="bx bx-lock-alt"></i>
+          <span> Пароли </span>
+        </a>
       </nav>
     </aside>
     <main>
+      <h1>Управление паролями</h1>
       <form>
         <input placeholder="SSH" type="text" name="ssh" required />
         <input placeholder="MySql" type="text" name="mysql" required />
@@ -31,10 +42,8 @@
       admin: "765465",
     };
     document.querySelector('input[name="ssh"]').value = defaultPasswords.ssh;
-    document.querySelector('input[name="mysql"]').value =
-      defaultPasswords.mysql;
-    document.querySelector('input[name="admin"]').value =
-      defaultPasswords.admin;
+    document.querySelector('input[name="mysql"]').value = defaultPasswords.mysql;
+    document.querySelector('input[name="admin"]').value = defaultPasswords.admin;
 
     const form = document.querySelector("form");
     const table = document.querySelector("table");
