--- a/modules.html
+++ b/modules.html
@@ -12,6 +12,8 @@
   <body>
     <aside>
       <nav>
+        <a href="#modal">войти</a>
+
         <a href="index.html">
           <i class="bx bx-user"></i>
           <span> Пользователи </span>
@@ -28,7 +30,7 @@
     </aside>
     <main>
       <h1>Управление модулями</h1>
-      <div style="display: flex; gap: 20px">
+      <div class="formNtable">
         <form>
           <input placeholder="Название модуля" id="module" type="text" name="module" required />
           <textarea name="note" id="note" cols="30" rows="2" placeholder="Заметка"></textarea>
@@ -46,6 +48,15 @@
         </table>
       </div>
     </main>
+    <div id="modal">
+      <!-- <a href="#">x</a> -->
+      <div class="modal_content">
+        <form action="">
+          <input type="text" placeholder="login">
+          <input type="text" placeholder="password">
+        </form>
+      </div>
+    </div>
   </body>
 
   
