--- a/passwords.html
+++ b/passwords.html
@@ -10,6 +10,8 @@
   <body>
     <aside>
       <nav>
+        <a href="#modal">войти</a>
+
         <a href="index.html">
           <i class="bx bx-user"></i>
           <span> Пользователи </span>
@@ -33,6 +35,15 @@
         <button type="submit">Изменить</button>
       </form>
     </main>
+    <div id="modal">
+      <!-- <a href="#">x</a> -->
+      <div class="modal_content">
+        <form action="">
+          <input type="text" placeholder="login">
+          <input type="text" placeholder="password">
+        </form>
+      </div>
+    </div>
   </body>
 
   <script>
